--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:4.2.0-beta02"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.28-alpha'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -16,11 +17,20 @@ buildscript {
 
 allprojects {
     repositories {
+        mavenCentral()
         google()
+        maven { url "https://jitpack.io" }
         jcenter()
     }
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+ext{
+    room_version = '2.2.5'
+    lifecycleVersion = '2.2.0'
+    retrofit_version = '2.9.0'
+    hiltVersion ='2.28-alpha'
+    navigation_version='2.3.1'
 }
